chore: dictionary improvements
