# src/dictionary/entities/dictionary.entity.ts
@@ -1,7 +1,6 @@
 import { Entity, Generated, PrimaryGeneratedColumn, OneToOne } from 'typeorm';
 import { Column, CreateDateColumn, UpdateDateColumn } from '../../common/decorators';
 import { Language } from '../../translations/translation.enum';
-import { ApiProperty } from '@nestjs/swagger';
 import { Translation } from '../../translations/entities/translation.entity';
 import { TimestampsInterface } from '../../common/interfaces/timestamps.interface';
 import { STATUS } from '../../common/enums/status.enum';
@@ -9,24 +8,19 @@ import { DictionaryProperties } from '../interfaces/dictionary-properties.interf
 
 @Entity({ name: 'dictionary' })
 export class Dictionary implements TimestampsInterface {
-  @ApiProperty({ example: 1, description: 'Primary key' })
   @PrimaryGeneratedColumn()
   id: number;
 
-  @ApiProperty({ description: 'UUID string', example: '12345678-1234-1234-1234-123456789012' })
   @Generated('uuid')
   @Column({ type: 'uuid', nullable: false })
   uuid: string;
 
-  @ApiProperty({ example: 'Hello there', description: 'Word or sentence' })
   @Column({ type: 'text', nullable: false })
   value: string;
 
-  @ApiProperty({ example: 'Some explanation', description: 'Dictionary word/sentence description, with examples' })
   @Column({ type: 'text', nullable: true })
   description: string;
 
-  @ApiProperty({ example: Language.EN, description: 'Language code' })
   @Column({ type: 'enum', enum: Language, nullable: false })
   language: Language;
 
@@ -43,11 +37,9 @@ export class Dictionary implements TimestampsInterface {
   @OneToOne(() => Translation, (translation) => translation.dictionary, { onDelete: 'CASCADE', nullable: true })
   translation: Translation;
 
-  @ApiProperty({ example: '2020-01-01T00:00:00.000Z' })
   @CreateDateColumn({ type: 'timestamp' })
   createdAt: Date;
 
-  @ApiProperty({ example: '2022-04-25T08:34:33.315Z' })
   @UpdateDateColumn({ type: 'timestamp' })
   updatedAt: Date;
 }
