# src/dictionary/request/update-dictionary.request.ts
@@ -1,10 +1,16 @@
 import { ApiProperty, PartialType } from '@nestjs/swagger';
 import { CreateDictionaryRequest } from './create-dictionary.request';
 import { STATUS } from '../../common/enums/status.enum';
-import { IsEnum } from 'class-validator';
+import { IsEnum, IsUUID } from 'class-validator';
 
-export class UpdateDictionaryRequest extends PartialType(CreateDictionaryRequest) {
+export class UpdateDictionaryRequestBody extends PartialType(CreateDictionaryRequest) {
   @ApiProperty({ description: 'Translation status', enum: STATUS, required: false })
   @IsEnum(STATUS)
   status: STATUS;
+}
+
+export class UpdateDictionaryRequestParam {
+  @ApiProperty({ description: 'Dictionary id', required: true })
+  @IsUUID('4')
+  uuid: string;
 }
